--- a/front/index.html
+++ b/front/index.html
@@ -20,7 +20,7 @@
   <main class="main">
     <section class="secao">
       <div class="form-floating">
-        <textarea class="form-control text_area" placeholder="Fala que eu te escuto..." id="floatingTextarea2" style="height: 208px;max-height: 210px;min-height: 210px; background-color:rgba(169, 169, 169, 0.199);"></textarea>
+        <textarea class="form-control text_area" placeholder="Fala que eu te escuto..." id="floatingTextarea2"></textarea>
         <label for="floatingTextarea2">Fala que eu te escuto...</label>
       </div>
       <div class="down_post">
