--- a/front/oi.html
+++ b/front/oi.html
@@ -15,5 +15,12 @@
     <img id="logo" src="midia/icon.png" alt="">
     <h1>FALA QUE EU TE ESCUTO</h1>
   </nav>
+  <main>
+    <section class="secao">
+      <div class="input-group flex-nowrap">
+        <input type="text" class="form-control" placeholder="Escreva seu nome" aria-label="Username" aria-describedby="addon-wrapping">
+      </div>
+    </section>
+  </main>
 </body>
 </html>
