--- a/front/index.html
+++ b/front/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FQETE</title>
@@ -11,40 +10,41 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="css/style.css">
-</head>
 <body>
   <nav class="cabecalho">
     <img id="logo" src="midia/icon.png" alt="">
     <h1>FALA QUE EU TE ESCUTO</h1>
   </nav>
-  <main class="main">
-    <section class="secao">
-      <div class="form-floating">
-        <textarea class="form-control text_area" placeholder="Fala que eu te escuto..." id="floatingTextarea2"></textarea>
-        <label for="floatingTextarea2">Fala que eu te escuto...</label>
+  <main>
+    <section class="secao_home shadow-lg">
+      <div class="input-group flex-nowrap">
+        <input type="text" class="form-control shadow-none border-0 fs-4" placeholder="Escreva seu nome" aria-label="Username" aria-describedby="addon-wrapping">
       </div>
-      <div class="down_post">
-        <div class="user">
-          <img src="midia/user.png" alt="" width="50px">
-          <h2 class="username">ANTÔNIMO</h2>
-        </div>
-        <button type="button" class="btn btn-success">Post</button>
-      </div>
+    </section>      
+    <div class="shadow-lg" id="txt_selecione">
+        <h2 class="fs-1 m-0">SELECIONE SEU AVATAR</h2>
+    </div>
+    <section class="secao_perfil shadow-lg">
+      <img src="midia/perfil-1.png" alt="" class="perfil_image">
+      <img src="midia/perfil-2.png" alt="" class="perfil_image">
+      <img src="midia/perfil-3.png" alt="" class="perfil_image">
+      <img src="midia/perfil-4.png" alt="" class="perfil_image">
+      <img src="midia/perfil-5.png" alt="" class="perfil_image">
+      <img src="midia/perfil-6.png" alt="" class="perfil_image">
+      <img src="midia/perfil-7.png" alt="" class="perfil_image">
+      <img src="midia/perfil-8.png" alt="" class="perfil_image">
+      <img src="midia/perfil-9.png" alt="" class="perfil_image">
+      <img src="midia/perfil-10.png" alt="" class="perfil_image">
+      <img src="midia/perfil-11.png" alt="" class="perfil_image">
+      <img src="midia/perfil-12.png" alt="" class="perfil_image">
+      <img src="midia/perfil-n.png" alt="" class="perfil_image">
+      <img src="midia/perfil-n.png" alt="" class="perfil_image">
+      <img src="midia/perfil-n.png" alt="" class="perfil_image">
+      <img src="midia/perfil-n.png" alt="" class="perfil_image">
     </section>
-    <section class="secao">
-      <div class="user">
-        <img src="midia/user.png" alt="" width="50px">
-        <h2 class="username">ANTÔNIMO</h2>
-      </div>
-      <div class="txt_postado my-2 p-1">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cum earum labore beatae? Sapiente eius, earum odit magnam obcaecati quibusdam, hic consequatur dignissimos, corporis nam tenetur fugit tempore optio ex inventore!
-      </div>
-      <div class="down_text">
-        <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
-        <button type="button" class="btn btn-primary"><i class="bi bi-hand-thumbs-up"></i></button>
-      </div>
-    </section>
+    <div>
+      <a href="home.html"><button type="button" class="btn btn-success btn_go">Avançar <i class="bi bi-arrow-right"></i></button></a>
+    </div>
   </main>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 </body>
 </html>
